# FlashVSR

./: .gitignore  README.md  flashvsr_cli.py  main.py  pyproject.toml
cli/: commands.py  main.py  pipeline_utils.py  utils.py
examples/WanVSR/: infer_flashvsr_full.py  infer_flashvsr_tiny.py  infer_flashvsr_tiny_long_video.py  infer_flashvsr_v1.1_full.py  infer_flashvsr_v1.1_tiny.py  infer_flashvsr_v1.1_tiny_long_video.py
flashvsr/: model_downloader.py  pipeline_utils.py  registry.py  utils.py
flashvsr/models/: flashvsr_utils.py  wan_video_dit.py
flashvsr/pipelines/: flashvsr_full.py  flashvsr_tiny.py  flashvsr_tiny_long.py
tests/: __init__.py  test_cli_utils.py  test_example.py
tests/cli/: test_cli_commands.py  test_cli_pipeline_utils.py  test_cli_utils.py
tests/flashvsr/: test_model_downloader.py  test_registry.py
tests/flashvsr/models/: test_flashvsr_utils.py  test_utils.py
